--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
+    "midtrans-client": "^1.3.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
